[package]
name = "motor_back"
version = "0.1.0"
authors = ["Aleksandr Kravtsov <sabahtalateh@gmail.com>"]
edition = "2018"

[dependencies]
## Это вся мутяга для сабскрумберов

# Для списка субскраберов
once_cell = "1.4.1"

# Быстрый хеш
fxhash = "0.2.1"

# Пиздец как эффективное хранилище
slab = "0.4.2"
##

# пароли шифровать
bcrypt = "0.8.2"

# ето маи макросы
proc_macro = { path = "../proc_macro" }
proc_macro_derive = { path = "../proc_macro/proc_macro_derive" }

# для асинка в трейтах
async-trait = "0.1.40"

# ну бля это актикс ёбана
actix = "0.10.0"
actix-cors = "0.3.0"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3.0.1"
actix-web-actors = "3.0.0"
tokio = { version = "0.3.2", features = ["time", "stream"] }

# датавремя
chrono = { version = "0.4.15", features = ["serde"] }

# брёвна
slog = "2.5.2"
slog-json = "2.3.0"
slog-term = "2.6.0"
slog-atomic = "3.0.0"
slog-async = "2.5.0"
log = "0.4.0"

# конфигурай
config = "0.10.1"
dotenv = "0.15.0"

# лупший
async-graphql = "2.0.10"
async-graphql-actix-web = "2.0.10"
thiserror = "1.0.21"

# монга
mongodb = "1.1.1"
bson = "1.1.0"

# Внедрение зависимостей.. (шобы это не значило)
shaku = "0.5.0"

# всеми любимый
serde = "1.0"
serde_json = "1.0"

# ленивый Стасик (иди работай)
lazy_static = "1.4.0"

# уникальный айди, почти такой же уникальный как ты
uuid = { version = "0.8.1", features = ["serde", "v4"] }

futures = "0.3"

# парсить урл
url = "2.2.0"

[dev-dependencies]
actix-rt = "*"
